// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <GifExpertApp/> Debe de mostrar una lista de categorías 1`] = `
<div>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    addCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="OPM"
      key="OPM"
    />
    <GifGrid
      category="DBZ"
      key="DBZ"
    />
  </ol>
</div>
`;

exports[`Pruebas en <GifExpertApp/> Debe mostrarse correctamente 1`] = `
<div>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    addCategories={[Function]}
  />
  <hr />
  <ol />
</div>
`;
